Fixes on mobile tutorial video

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -544,9 +544,6 @@ ol{
   }
   h1{
     a {
-
-      
-
       font-weight: 400;
       line-height: 0.8em;
       text-shadow: 3px 3px 3px #000;
@@ -631,6 +628,9 @@ ol{
     }
     background: #eee;
   }
+  #modal-video iframe{
+    max-width: 100%;
+  } 
 } 
 @media only screen and (max-width: 1023px) {
   h1{
